[gd_scene load_steps=5 format=3 uid="uid://dvvcv7up6s26q"]

[ext_resource type="Script" path="res://scripts/projectil.gd" id="1_ogexp"]
[ext_resource type="Texture2D" uid="uid://b43rsn4nhpju3" path="res://assets/sprites/shot.png" id="2_iwnbv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bsp7e"]
radius = 4.12311

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3jq11"]
size = Vector2(6, 9)

[node name="Projectile" type="CharacterBody2D"]
script = ExtResource("1_ogexp")

[node name="sprite_projectile" type="Sprite2D" parent="."]
texture = ExtResource("2_iwnbv")

[node name="CoolDown" type="Timer" parent="."]
wait_time = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_bsp7e")
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_3jq11")

[connection signal="timeout" from="CoolDown" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
